k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app-service
  namespace: node-app
spec:
  selector:
    app: my-node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
